--- a/package.json
+++ b/package.json
@@ -6,17 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:prod": "prisma migrate deploy && prisma generate && next build && next start",
+    "test:playwright": "playwright test && playwright show-report",
+    "test:playwright-ui": "playwright test --ui",
+    "test:jest": "jest",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
+    "@mui/system": "^5.13.6",
+    "@prisma/client": "^4.16.1",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.5"
+    "react-hook-form": "^7.45.1",
+    "typescript": "5.1.5",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.35.1",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.5.0"
   }
 }
